@@ -1,6 +1,7 @@
 Version 5.3.3
 - Fix incorrect types in some const initializations.
 - Fixed a problem with comments in the preprocessor
+- Fixed incorrect line numbers after ASMCLK
 
 Version 5.3.2
 - Accept ' as a digit separator as well as '_' (C++14 uses single quote)
